# olive

./: .gitignore  .olive.yaml  .pre-commit-config.yaml  .temporal.db  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EXTENDED_README.md  INSTALL_WITH_UV.md  LICENSE  Makefile  PACKAGE_INSTALLATION.md  README.md  README_EN.md  codecov.yml  example.py  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  pre-commit.yml  publish-package.yml  tests.yml
docs/plans/: 2025-01-26-olive-ai-typescript-client.md
olive/: __init__.py  cli.py  config.py  decorator.py  registry.py  router.py  schemas.py  setup.py
olive/server/: __init__.py  app.py
olive/temporal/: __init__.py  activities.py  worker.py  workflows.py
olive_client/: __init__.py  client.py
scripts/: release.sh  test-build.sh
tests/: __init__.py  test_annotated_field_types.py  test_cli.py  test_client_features.py  test_config.py  test_context_validation.py  test_decorator.py  test_edge_cases.py  test_elevenlabs_clean_schema.py  test_elevenlabs_format.py  test_health.py  test_init.py  test_integration.py  test_integration_elevenlabs.py  test_registry_thread_safety.py  test_router_temporal.py  test_schema_edge_cases.py  test_schemas.py  test_schemas_additional.py  test_server.py  test_structured_errors.py  test_temporal.py  test_timeouts.py  test_without_temporal.py
typings/: .gitkeep
