[project]
name = "olive"
version = "1.1.0"
description = "Minimal framework for exposing FastAPI endpoints as LangChain tools with Temporal"
authors = [{ name = "YaVendio", email = "t@yavendio.com" }]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Private :: Do Not Upload",
]

dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.10.0",
    "httpx>=0.27.0",
    "langchain-core>=0.3.0",
    "temporalio>=1.7.0",
    "typer>=0.15.0",
    "rich>=13.10.0",
    "pyyaml>=6.0",
    "pytest>=8.4.1",
]

[project.urls]
"Homepage" = "https://github.com/YaVendio/olive"
"Repository" = "https://github.com/YaVendio/olive"
"Bug Reports" = "https://github.com/YaVendio/olive/issues"

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "basedpyright>=1.21.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "uvicorn[standard]>=0.32.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
olive = "olive.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["olive", "olive_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["B", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["olive", "olive_client"]

[tool.basedpyright]
pythonVersion = "3.13"
pythonPlatform = "Linux"
typeCheckingMode = "standard"
useLibraryCodeForTypes = true
stubPath = "typings"
exclude = [
    "**/__pycache__",
    "**/node_modules",
    "**/.venv",
    ".git",
    "dist",
    "build",
    "tests/**",
]
reportPrivateUsage = false
reportUnusedFunction = false
reportUnusedImport = false
reportMissingParameterType = false
reportOptionalMemberAccess = false
reportAttributeAccessIssue = false
reportMissingTypeArgument = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportAny = false
reportImplicitOverride = false
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = ["pre-commit>=4.3.0"]
